@@ -221,6 +221,7 @@ typedef long long unsigned int ILuint64;
 #define IL_WBMP			0x0445
 #define IL_SUN			0x0446
 #define IL_IFF			0x0447
+#define IL_TPL			0x0448
 
 
 #define IL_JASC_PAL     0x0475
