@@ -403,6 +403,12 @@ ILboolean ilLoadTiffL(const void *Lump, ILuint Size);
 ILboolean ilSaveTiff(ILconst_string FileName);
 ILuint    ilSaveTiffF(ILHANDLE File);
 ILuint    ilSaveTiffL(void *Lump, ILuint Size);
+ILboolean ilIsValidTpl(ILconst_string FileName);
+ILboolean ilIsValidTplF(ILHANDLE File);
+ILboolean ilIsValidTplL(const void *Lump, ILuint Size);
+ILboolean ilLoadTpl(ILconst_string FileName);
+ILboolean ilLoadTplF(ILHANDLE File);
+ILboolean ilLoadTplL(const void *Lump, ILuint Size);
 ILboolean ilIsValidVtf(ILconst_string FileName);
 ILboolean ilIsValidVtfF(ILHANDLE File);
 ILboolean ilIsValidVtfL(const void *Lump, ILuint Size);
